--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,4 +1,383 @@
-body {
-  background-color: tan;
+/* resets */
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn+SC&family=Vollkorn:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0;
+}
+
+/**
+* Styles
+*/
+:root {
+  --accent: #c9ac4c;
+  --accent-faded: #e0d7ba;
+  --accent-dark: #8f7624;
+  --text: #333333;
+  --bk: #f7f7f2;
+  --radius: 4px;
+  --gap: 1rem;
+}
+
+@media (min-width: 768px) {
+  :root {
+    --gap: 1.5rem;
+  }
+}
+
+html {
+  font-size: clamp(16px, calc(14px + 0.5vw), 20px);
+  font-family: "Vollkorn", serif;
+  line-height: 1.6;
+  color: var(--text);
+  background-color: var(--bk);
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Vollkorn SC", serif;
+  line-height: 1.3;
+}
+
+.wrapper {
+  padding: 0 1rem;
+}
+
+.inner {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.cta {
+  display: inline-block;
+  text-align: center;
+  padding: 0.35em 0.5em 0.25em;
+  background-color: var(--accent);
+  text-decoration: none;
+  color: white;
+  border-radius: var(--radius);
+  -webkit-transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease;
+}
+
+.cta:focus, .cta:hover {
+  opacity: 0.8;
+}
+
+.cta:focus {
+  outline: none;
+  -webkit-box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.5);
+}
+
+.badge {
+  display: inline-block;
+  padding: 0.25em 0.5em;
+  padding-top: 0.5em;
+  background-color: var(--accent-faded);
+  color: var(--accent-dark);
+  line-height: 1.2;
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  border-radius: var(--radius);
+  letter-spacing: 1px;
+}
+
+*:focus {
+  outline-color: var(--accent-dark);
+}
+
+header .inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header img {
+  max-width: 180px;
+}
+
+footer {
+  min-height: 3rem;
+}
+
+.presentation {
+  min-height: 70vh;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.presentation .inner {
+  max-width: 900px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: minmax(30%, 100px) 1fr;
+      grid-template-columns: minmax(30%, 100px) 1fr;
+  -ms-grid-rows: auto auto;
+      grid-template-rows: auto auto;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  grid-gap: 1rem;
+}
+
+.presentation img {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  border-radius: 50%;
+}
+
+.presentation h1 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-size: 2.5rem;
+  line-height: 1;
+  color: var(--accent);
+}
+
+.presentation h1 small {
+  font-size: 0.5em;
+}
+
+.presentation p {
+  grid-column: 1 / -1;
+}
+
+@media (min-width: 768px) {
+  .presentation .inner {
+    -ms-grid-columns: auto 1fr;
+        grid-template-columns: auto 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+  }
+  .presentation img {
+    grid-row: 1 /-1;
+    max-width: 250px;
+  }
+  .presentation h1 {
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
+  .presentation p {
+    grid-column: unset;
+  }
+}
+
+.case {
+  margin-bottom: 4rem;
+}
+
+.case .inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+
+.case .block:first-of-type {
+  padding: 1rem 1rem 1rem 0;
+}
+
+.case .copy {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.case .copy > * {
+  margin-bottom: 0.5rem;
+}
+
+.case img {
+  border-radius: var(--radius);
+}
+
+@media (min-width: 768px) {
+  .case .inner {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .case .block {
+    width: 50%;
+  }
+}
+
+.roteiros {
+  margin-bottom: 4rem;
+}
+
+.roteiros h2 {
+  margin-bottom: 1rem;
+}
+
+.roteiros .card-list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  grid-gap: var(--gap);
+}
+
+.roteiros .card img {
+  border-radius: var(--radius);
+}
+
+.roteiros .card p {
+  text-align: right;
+  line-height: 1.2;
+  margin-top: 0.5em;
+  margin-left: 20%;
+  font-size: 0.9em;
+}
+
+@media (min-width: 768px) {
+  .roteiros .card-list {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+  .roteiros p {
+    margin-top: 1.5em;
+  }
+}
+
+.social-media {
+  margin-bottom: 4rem;
+}
+
+.social-media h2 {
+  margin-bottom: 1rem;
+}
+
+.social-media img {
+  border-radius: var(--radius);
+}
+
+.social-media .grid {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: var(--gap);
+}
+
+.social-media .featured {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
+  grid-gap: var(--gap);
+  place-items: end;
+  margin-bottom: 1rem;
+  text-align: right;
+}
+
+.social-media .sub-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-gap: var(--gap);
+}
+
+@media (min-width: 768px) {
+  .social-media .featured {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 0;
+    text-align: left;
+  }
+  .social-media .sub-grid {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.landing-pages {
+  margin-bottom: 4rem;
+}
+
+.landing-pages h2 {
+  margin-bottom: 1rem;
+}
+
+.landing-pages .grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
+  grid-gap: var(--gap);
+  margin-bottom: var(--gap);
+}
+
+.landing-pages img {
+  border-radius: var(--radius);
+}
+
+.landing-pages p {
+  text-align: right;
+  margin-left: 20%;
+}
+
+@media (min-width: 768px) {
+  .landing-pages .grid {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
 }
 /*# sourceMappingURL=styles.css.map */
