--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,3 +1,355 @@
-body {
-  background-color: tan;
+/* resets */
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  // font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0;
+}
+
+/**
+* Styles
+*/
+
+// ----------------
+// Variáveis
+:root {
+  // --accent: #d4af37;
+  --accent: #c9ac4c;
+  --accent-faded: #e0d7ba;
+  --accent-dark: #8f7624;
+  --text: #333333;
+  --bk: #f7f7f2;
+
+  --radius: 4px;
+  --gap: 1rem;
+
+  @media (min-width: 768px) {
+    --gap: 1.5rem;
+  }
+}
+
+// ----------------
+// Typography
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn+SC&family=Vollkorn:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+html {
+  font-size: clamp(16px, calc(14px + 0.5vw), 20px);
+  font-family: "Vollkorn", serif;
+  line-height: 1.6;
+  color: var(--text);
+  background-color: var(--bk);
+}
+h1,
+h2,
+h3 {
+  font-family: "Vollkorn SC", serif;
+  line-height: 1.3;
+}
+
+// ----------------
+// Base
+.wrapper {
+  padding: 0 1rem;
+}
+
+.inner {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.cta {
+  display: inline-block;
+  text-align: center;
+  padding: 0.35em 0.5em 0.25em;
+  background-color: var(--accent);
+  text-decoration: none;
+  color: white;
+  border-radius: var(--radius);
+  transition: opacity 0.2s ease;
+
+  &:focus,
+  &:hover {
+    opacity: 0.8;
+  }
+  &:focus {
+    outline: none;
+    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.5);
+  }
+}
+
+.badge {
+  display: inline-block;
+  padding: 0.25em 0.5em;
+  padding-top: 0.5em;
+  background-color: var(--accent-faded);
+  color: var(--accent-dark);
+  line-height: 1.2;
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  border-radius: var(--radius);
+  letter-spacing: 1px;
+}
+
+*:focus {
+  outline-color: var(--accent-dark);
+}
+
+// ----------------
+// Header
+header {
+  .inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  img {
+    max-width: 180px;
+  }
+}
+
+// ----------------
+// Footer
+footer {
+  min-height: 3rem;
+}
+
+// ----------------
+// Presentation
+.presentation {
+  min-height: 70vh;
+  display: grid;
+  place-items: center;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+
+  .inner {
+    max-width: 900px;
+    display: grid;
+    grid-template-columns: minmax(30%, 100px) 1fr;
+    grid-template-rows: auto auto;
+    align-content: center;
+    grid-gap: 1rem;
+  }
+
+  img {
+    align-self: center;
+    border-radius: 50%;
+  }
+
+  h1 {
+    align-self: center;
+    font-size: 2.5rem;
+    line-height: 1;
+    color: var(--accent);
+    small {
+      font-size: 0.5em;
+    }
+  }
+
+  p {
+    grid-column: 1 / -1;
+  }
+
+  @media (min-width: 768px) {
+    .inner {
+      grid-template-columns: auto 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
+    img {
+      grid-row: 1 /-1;
+      max-width: 250px;
+    }
+    h1 {
+      align-self: flex-end;
+    }
+    p {
+      grid-column: unset;
+    }
+  }
+}
+
+// ----------------
+// Case Diego
+.case {
+  margin-bottom: 4rem;
+
+  .inner {
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+
+  .block {
+    &:first-of-type {
+      padding: 1rem 1rem 1rem 0;
+    }
+  }
+
+  .copy {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    > * {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  img {
+    border-radius: var(--radius);
+  }
+
+  @media (min-width: 768px) {
+    .inner {
+      flex-direction: row;
+    }
+    .block {
+      width: 50%;
+    }
+  }
+}
+
+// ----------------
+// Roteiros
+.roteiros {
+  margin-bottom: 4rem;
+
+  h2 {
+    margin-bottom: 1rem;
+  }
+
+  .card-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: var(--gap);
+  }
+
+  .card {
+    img {
+      border-radius: var(--radius);
+    }
+
+    p {
+      text-align: right;
+      line-height: 1.2;
+      margin-top: 0.5em;
+      margin-left: 20%;
+      font-size: 0.9em;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .card-list {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    p {
+      margin-top: 1.5em;
+    }
+  }
+}
+
+// ----------------
+// Social Media
+.social-media {
+  margin-bottom: 4rem;
+
+  h2 {
+    margin-bottom: 1rem;
+  }
+
+  img {
+    border-radius: var(--radius);
+  }
+
+  .grid {
+    display: grid;
+    grid-gap: var(--gap);
+  }
+
+  .featured {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: var(--gap);
+    place-items: end;
+    margin-bottom: 1rem;
+    text-align: right;
+  }
+
+  .sub-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: var(--gap);
+  }
+
+  @media (min-width: 768px) {
+    .featured {
+      grid-template-columns: repeat(2, 1fr);
+      margin-bottom: 0;
+      text-align: left;
+    }
+
+    .sub-grid {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+}
+
+// ----------------
+// Landin Pages
+.landing-pages {
+  margin-bottom: 4rem;
+
+  h2 {
+    margin-bottom: 1rem;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: var(--gap);
+    margin-bottom: var(--gap);
+  }
+
+  img {
+    border-radius: var(--radius);
+  }
+
+  p {
+    text-align: right;
+    margin-left: 20%;
+  }
+
+  @media (min-width: 768px) {
+    .grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
 }
