--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -45,7 +45,7 @@ img {
   --accent: #c9ac4c;
   --accent-faded: #e0d7ba;
   --accent-dark: #8f7624;
-  --text: #333333;
+  --text: #555555;
   --bk: #f7f7f2;
   --shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
   --radius: 4px;
@@ -73,6 +73,7 @@ h2,
 h3 {
   font-family: "Vollkorn SC", serif;
   line-height: 1.3;
+  color: var(--accent-dark);
 }
 
 .wrapper {
@@ -458,6 +459,8 @@ footer .icons svg {
 
 .social-media img {
   border-radius: var(--radius);
+  -webkit-box-shadow: var(--shadow);
+          box-shadow: var(--shadow);
 }
 
 .social-media .grid {
