--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -47,7 +47,7 @@ img {
   --accent: #c9ac4c;
   --accent-faded: #e0d7ba;
   --accent-dark: #8f7624;
-  --text: #333333;
+  --text: #555555;
   --bk: #f7f7f2;
 
   --shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
@@ -77,6 +77,7 @@ h2,
 h3 {
   font-family: "Vollkorn SC", serif;
   line-height: 1.3;
+  color: var(--accent-dark);
 }
 
 // ----------------
@@ -431,6 +432,7 @@ footer {
 
   img {
     border-radius: var(--radius);
+    box-shadow: var(--shadow);
   }
 
   .grid {
