--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -162,7 +162,7 @@ h3 {
 }
 
 .hover-link.hover-internal::after, .hover-link.hover-instagram::after, .hover-link.hover-external::after, .hover-link.hover-image::after {
-  background-size: 20%;
+  background-size: 15%;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -488,6 +488,10 @@ footer .icons svg {
   grid-gap: var(--gap);
 }
 
+.social-media p {
+  font-style: italic;
+}
+
 @media (min-width: 768px) {
   .social-media .featured {
     -ms-grid-columns: (1fr)[2];
@@ -516,15 +520,34 @@ footer .icons svg {
       grid-template-columns: repeat(1, 1fr);
   grid-gap: var(--gap);
   margin-bottom: var(--gap);
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.landing-pages a {
+  position: relative;
+  padding-top: calc((11 / 16) * 100%);
+  height: 0;
+  -webkit-box-shadow: var(--shadow);
+          box-shadow: var(--shadow);
 }
 
 .landing-pages img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   border-radius: var(--radius);
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .landing-pages p {
   text-align: right;
   margin-left: 20%;
+  font-style: italic;
 }
 
 @media (min-width: 768px) {
@@ -552,6 +575,9 @@ footer .icons svg {
 
 .artigos .card {
   margin-bottom: 1rem;
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
 }
 
 .artigos .card img {
@@ -563,6 +589,17 @@ footer .icons svg {
   line-height: 1.2;
   margin-top: var(--gap);
   margin-left: 20%;
+}
+
+.artigos a {
+  text-decoration: none;
+  color: inherit;
+  padding: 0.25rem;
+}
+
+.artigos p {
+  font-style: italic;
+  opacity: 0.5;
 }
 
 @media (min-width: 768px) {
